--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,17 @@
 
     function fetchAll() {
       let TestDataClass = ncmb.DataStore(db);
-      TestDataClass.order("name",false).fetchAll()
+      let input=$("#city").val();
+      TestDataClass.equalTo("city",input).fetchAll()
+        .then(function(results) {
+          showResults(results);
+        })
+    }
+
+      function searchName() {
+      let name=$("#name").val();
+      let TestDataClass = ncmb.DataStore(db);
+      TestDataClass.equalTo("name",name).fetchAll()
         .then(function(results) {
           showResults(results);
         })
