--- a/www/index.html
+++ b/www/index.html
@@ -17,15 +17,14 @@
 
     function fetchAll() {
       let TestDataClass = ncmb.DataStore(db);
-      let input=$("#city").val();
-      TestDataClass.equalTo("city",input).fetchAll()
+      TestDataClass.order("name",false).fetchAll()
         .then(function(results) {
           showResults(results);
         })
     }
 
-      function searchName() {
-      let name=$("#name").val();
+     function searchName() {
+         let name=$("#name").val();//変数宣言
       let TestDataClass = ncmb.DataStore(db);
       TestDataClass.equalTo("name",name).fetchAll()
         .then(function(results) {
@@ -34,36 +33,31 @@
     }
 
     function searchLevel() {
-      let level=parseInt($("#level").val());
+         let level=parseInt($("#level").val());
       let TestDataClass = ncmb.DataStore(db);
-      TestDataClass.lessThen("level",level).fetchAll()
+      TestDataClass.equalTo("level",level).fetchAll()
         .then(function(results) {
           showResults(results);
         })
     }
 
+    
+
     function showResults(results) {
       // テーブルのヘッダを生成
-      let msg = "<table><tr><th>name</th><th>Lvl</th><th>attack</th><th>defence</th></tr>";
+      let msg = "<table><tr><th>name</th><th>type</th><th>cost</th><th>power</th></tr>";
       for (let i = 0; i < results.length; i++) {
         // 各データを収めた表の列を生成
         msg += "<tr>";
         msg += "<td>" + results[i].name + "</td>";
-        msg += "<td class='num'>" + results[i].level + "</td>";
-        msg += "<td class='num'>" + results[i].attack + "</td>";
-        msg += "<td class='num'>" + results[i].defence + "</td>";
+        msg += "<td class='num'>" + results[i].type + "</td>";
+        msg += "<td class='num'>" + results[i].cost + "</td>";
+        msg += "<td class='num'>" + results[i].power + "</td>";
         msg += "</tr>";
       }
       // テーブルのテイラを生成
       msg += "</table>";
       $("#message").html(msg);
-    }
-    function seatchLevelGT{
-        let level=parseInt($("#level").val(),10);
-        let TestDataClass=ncmb.DataStore(db);
-        TestDataClass.greaterThen("level",level).fetchAll().then(function(results){
-            showResults(results);
-        })
     }
   </script>
 </head>
@@ -75,16 +69,16 @@
     <input id="name" type="text" placeholder="monster name">
   </div>
   <div>
-    <label for="level">level:</label>
-    <input id="level" type="number" placeholder="monster level">
+    <label for="level">cost:</label>
+    <input id="level" type="number" placeholder="monster cost">
   </div>
   <div id="button">
     <button class="btn" onclick="fetchAll()">Fetch All</button>
     <button class="btn" onclick="searchName()">Name</button>
-    <button class="btn" onclick="searchLevel()">Level</button>
-    <br>
-    <button class="btn" onclick="searchLevelLT()">Level &lt</button>
-    <button class="btn" onclick="searchLevelGT()">Level &gt</button>
+  <br>
+    <button class="btn" onclick="searchLevelLT()">cost &lt</button>
+    <button class="btn" onclick="searchLevel()">cost</button>
+    <button class="btn" onclick="searchLevelGT()">cost &gt</button>
   </div>
   <div id="message">message area</div>
 </body>
