検索欄の名称を変更した。

--- a/www/index.html
+++ b/www/index.html
@@ -70,7 +70,7 @@
   </div>
   <div>
     <label for="level">cost:</label>
-    <input id="level" type="number" placeholder="monster cost">
+    <input id="level" type="number" placeholder="cost">
   </div>
   <div id="button">
     <button class="btn" onclick="fetchAll()">Fetch All</button>
