--- a/www/index.html
+++ b/www/index.html
@@ -66,7 +66,7 @@
   <h1>mBaaS search</h1>
   <div>
     <label for="name">name:</label>
-    <input id="name" type="text" placeholder="monster name">
+    <input id="name" type="text" placeholder="name">
   </div>
   <div>
     <label for="level">cost:</label>
