--- a/www/index.html
+++ b/www/index.html
@@ -72,6 +72,10 @@
     <label for="level">cost:</label>
     <input id="level" type="number" placeholder="cost">
   </div>
+  <div>
+      <label for="type">type:</label>
+      <input id="type" type="type" placeholder="type">
+  </div>
   <div id="button">
     <button class="btn" onclick="fetchAll()">Fetch All</button>
     <button class="btn" onclick="searchName()">Name</button>
